первая итерация работы над ошибками